GCC compiler and MinGW64 added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,9 @@ project(SimpleSQLite C)
 set(CMAKE_C_STANDARD 99)
 
 add_executable(SimpleSQLite main.c
-        InputBuffer.h
-        InputBuffer.c)
+        core/InputBuffer.h
+        core/InputBuffer.c
+        Compiler/Tokenizer.h
+        core/CommandProcessor.h
+        core/CommandProcessor.c
+)
