WIP - Barebones implementation of the compiler and virtual machine added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,10 @@ set(CMAKE_C_STANDARD 99)
 add_executable(SimpleSQLite main.c
         core/InputBuffer.h
         core/InputBuffer.c
-        Compiler/Tokenizer.h
+        compiler/Tokenizer.h
         core/CommandProcessor.h
         core/CommandProcessor.c
+        compiler/Tokenizer.c
+        core/VirtualMachine.h
+        core/VirtualMachine.c
 )
